--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -25,14 +25,14 @@ header {
 .title {
   position: absolute;
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  left: 0;
+  transform: translateY(-50%);
   color: $light;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  width: 30rem;
+  width: 100%;
   height: 30rem;
 }
 
