--- a/src/assets/scss/_project.scss
+++ b/src/assets/scss/_project.scss
@@ -76,7 +76,7 @@ nav {
   color: rgb(193, 192, 198);
   display: flex;
   flex-direction: column;
-  padding: 2rem;
+  // padding: 2rem;
 }
 
 .content {
